Clean up and add deprecated annotations